--- a/.github/workflows/move_issue_to_in_review_with_commit.yml
+++ b/.github/workflows/move_issue_to_in_review_with_commit.yml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       issues: write
       contents: read
-      project: write
+      projects: write
 
     steps:
       - name: Move issue cards to "In review"
