--- a/.github/workflows/move_issue_to_in_review_with_commit.yml
+++ b/.github/workflows/move_issue_to_in_review_with_commit.yml
@@ -3,7 +3,7 @@ name: Move issue to "In review" in Projects v2
 on:
   push:
     branches:
-      - main  # Or your active branch
+      - main
 
 jobs:
   update-project-status:
@@ -12,14 +12,14 @@ jobs:
     steps:
       - name: Update Project field to "In review" for referenced issues
         env:
-          GH_TOKEN: ${{ secrets.GH_PROJECTS_TOKEN_2 }}
+          GH_TOKEN: ${{ secrets.GH_PROJECTS_TOKEN }}
         uses: actions/github-script@v7
         with:
           script: |
             const issuePattern = /(?:#|gh-)(\d+)/gi;
-            const projectId = "PVT_kwHODArNsc4A4n6f";
-            const fieldId = "PVTSSF_lAHODArNsc4A4n6fzgtj29U";
-            const inReviewOptionId = "df73e18b";
+            const projectId = "PVT_kwHODArNsc4A4n6f"; // your project
+            const fieldId = "PVTSSF_lAHODArNsc4A4n6fzgtj29U"; // Status field
+            const inReviewOptionId = "df73e18b"; // "In review" option
             const commits = context.payload.commits;
             const issueNumbers = new Set();
 
@@ -42,7 +42,9 @@ jobs:
             });
 
             for (const issueNumber of issueNumbers) {
-              // Get node ID of the issue
+              console.log(`Processing issue #${issueNumber}`);
+
+              // Step 1: Get the issue's node ID
               const issueData = await graphqlWithAuth(`
                 query($owner: String!, $repo: String!, $issue: Int!) {
                   repository(owner: $owner, name: $repo) {
@@ -58,15 +60,36 @@ jobs:
               });
 
               const issueId = issueData.repository.issue.id;
+              console.log(`Issue node ID: ${issueId}`);
 
-              console.log(`Setting status of issue #${issueNumber} to "In review"`);
+              // Step 2: Get the project item ID for this issue
+              const itemData = await graphqlWithAuth(`
+                query($projectId: ID!, $contentId: ID!) {
+                  projectV2ItemByContent(projectId: $projectId, contentId: $contentId) {
+                    id
+                  }
+                }
+              `, {
+                projectId,
+                contentId: issueId
+              });
 
+              const itemId = itemData.projectV2ItemByContent?.id;
+
+              if (!itemId) {
+                console.log(`❌ Issue #${issueNumber} is not in the project. Skipping.`);
+                continue;
+              }
+
+              console.log(`✅ Found project item ID: ${itemId}`);
+
+              // Step 3: Update the field to "In review"
               await graphqlWithAuth(`
                 mutation {
                   updateProjectV2ItemFieldValue(
                     input: {
                       projectId: "${projectId}",
-                      itemId: "${issueId}",
+                      itemId: "${itemId}",
                       fieldId: "${fieldId}",
                       value: {
                         singleSelectOptionId: "${inReviewOptionId}"
@@ -79,4 +102,6 @@ jobs:
                   }
                 }
               `);
+
+              console.log(`🎯 Updated issue #${issueNumber} to "In review"`);
             }
