--- a/.github/workflows/move_issue_to_in_review_with_commit.yml
+++ b/.github/workflows/move_issue_to_in_review_with_commit.yml
@@ -12,14 +12,15 @@ jobs:
     steps:
       - name: Update Project field to "In review" for referenced issues
         env:
-          GH_TOKEN: ${{ secrets.GH_PROJECTS_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_PROJECTS_TOKEN_2 }}
         uses: actions/github-script@v7
         with:
           script: |
             const issuePattern = /(?:#|gh-)(\d+)/gi;
-            const projectId = "PVT_kwHODArNsc4A4n6f"; // your project
-            const fieldId = "PVTSSF_lAHODArNsc4A4n6fzgtj29U"; // Status field
-            const inReviewOptionId = "df73e18b"; // "In review" option
+            const projectId = "PVT_kwHODArNsc4A4n6f"; // your project ID
+            const fieldId = "PVTSSF_lAHODArNsc4A4n6fzgtj29U"; // Status field ID
+            const inReviewOptionId = "df73e18b"; // "In review" option ID
+
             const commits = context.payload.commits;
             const issueNumbers = new Set();
 
@@ -42,9 +43,9 @@ jobs:
             });
 
             for (const issueNumber of issueNumbers) {
-              console.log(`Processing issue #${issueNumber}`);
+              console.log(`🔍 Processing issue #${issueNumber}`);
 
-              // Step 1: Get the issue's node ID
+              // Step 1: Get issue's node ID
               const issueData = await graphqlWithAuth(`
                 query($owner: String!, $repo: String!, $issue: Int!) {
                   repository(owner: $owner, name: $repo) {
@@ -60,30 +61,42 @@ jobs:
               });
 
               const issueId = issueData.repository.issue.id;
-              console.log(`Issue node ID: ${issueId}`);
 
-              // Step 2: Get the project item ID for this issue
-              const itemData = await graphqlWithAuth(`
-                query($projectId: ID!, $contentId: ID!) {
-                  projectV2ItemByContent(projectId: $projectId, contentId: $contentId) {
-                    id
+              // Step 2: Find item in project by matching issue number
+              const itemsData = await graphqlWithAuth(`
+                query($projectId: ID!) {
+                  node(id: $projectId) {
+                    ... on ProjectV2 {
+                      items(first: 100) {
+                        nodes {
+                          id
+                          content {
+                            ... on Issue {
+                              id
+                              number
+                            }
+                          }
+                        }
+                      }
+                    }
                   }
                 }
               `, {
-                projectId,
-                contentId: issueId
+                projectId
               });
 
-              const itemId = itemData.projectV2ItemByContent?.id;
+              const items = itemsData.node.items.nodes;
+              const matchingItem = items.find(item => item.content?.number === issueNumber);
 
-              if (!itemId) {
+              if (!matchingItem) {
                 console.log(`❌ Issue #${issueNumber} is not in the project. Skipping.`);
                 continue;
               }
 
+              const itemId = matchingItem.id;
               console.log(`✅ Found project item ID: ${itemId}`);
 
-              // Step 3: Update the field to "In review"
+              // Step 3: Update "Status" field to "In review"
               await graphqlWithAuth(`
                 mutation {
                   updateProjectV2ItemFieldValue(
