--- a/.github/workflows/move_issue_to_in_review_with_commit.yml
+++ b/.github/workflows/move_issue_to_in_review_with_commit.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Update Project field to "In review" for referenced issues
         env:
-          GH_TOKEN: ${{ secrets.GH_PROJECTS_TOKEN_2 }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN_ACTIONS_3 }}
         uses: actions/github-script@v7
         with:
           script: |
