--- a/.github/workflows/move_issue_to_in_review_with_commit.yml
+++ b/.github/workflows/move_issue_to_in_review_with_commit.yml
@@ -17,20 +17,20 @@ jobs:
         with:
           script: |
             const issuePattern = /(?:#|gh-)(\d+)/gi;
-            const projectId = "PVT_kwHODArNsc4A4n6f";  // Use your Project v2 ID here if it's a Project v2
-            const fieldId = "PVTSSF_lAHODArNsc4A4n6fzgtj29U";  // Field ID
-            const inReviewOptionId = "df73e18b";  // Option ID for "In review"
-            
+            const projectId = "PVT_kwDODJdNvM4A4wMz";
+            const fieldId = "PVTSSF_lADODJdNvM4A4wMzzgtqqm4";
+            const inReviewOptionId = "df73e18b";
+
             const commits = context.payload.commits;
             const issueNumbers = new Set();
-            
+
             for (const commit of commits) {
               let match;
               while ((match = issuePattern.exec(commit.message)) !== null) {
                 issueNumbers.add(Number(match[1]));
               }
             }
-            
+
             if (issueNumbers.size === 0) {
               console.log("No referenced issues found.");
               return;
@@ -45,7 +45,7 @@ jobs:
             for (const issueNumber of issueNumbers) {
               console.log(`🔍 Processing issue #${issueNumber}`);
 
-              // Fetch issue data and find item in project
+              // Step 1: Get the issue's node ID
               const issueData = await graphqlWithAuth(`
                 query($owner: String!, $repo: String!, $issue: Int!) {
                   repository(owner: $owner, name: $repo) {
@@ -62,7 +62,7 @@ jobs:
 
               const issueId = issueData.repository.issue.id;
 
-              // Fetch project items and match the issue number
+              // Step 2: Get project item ID for this issue
               const itemsData = await graphqlWithAuth(`
                 query($projectId: ID!) {
                   node(id: $projectId) {
@@ -96,7 +96,7 @@ jobs:
               const itemId = matchingItem.id;
               console.log(`✅ Found project item ID: ${itemId}`);
 
-              // Step 3: Update "Status" field to "In review"
+              // Step 3: Update the field to "In review"
               await graphqlWithAuth(`
                 mutation {
                   updateProjectV2ItemFieldValue(
