--- a/.github/workflows/move_issue_to_in_review_with_commit.yml
+++ b/.github/workflows/move_issue_to_in_review_with_commit.yml
@@ -10,95 +10,106 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-            - name: Move issue to "In review"
-              env:
-                GH_TOKEN: ${{ secrets.GH_TOKEN_ACTIONS_3 }}
-              uses: actions/github-script@v7
-              with:
-                script: |
-                  const issuePattern = /(?:#|gh-)(\d+)/gi;
-                  const projectId = "PVT_kwDODJdNvM4A4wSl";
-                  const fieldId = "PVTSSF_lADODJdNvM4A4wMzzgtqqm4";
-                  const inReviewOptionId = "df73e18b";
-                  const commits = context.payload.commits;
-                  const issueNumbers = new Set();
+                  - name: Move issue to "In review"
+                    env:
+                      GH_TOKEN: ${{ secrets.GH_TOKEN_ACTIONS_3 }}
+                    uses: actions/github-script@v7
+                    with:
+                      script: |
+                        const issuePattern = /(?:#|gh-)(\d+)/gi;
+                        const projectId = "PVT_kwDODJdNvM4A4wSl";
+                        const fieldId = "PVTSSF_lADODJdNvM4A4wMzzgtqqm4";
+                        const inReviewOptionId = "df73e18b";
+                        const commits = context.payload.commits;
+                        const issueNumbers = new Set();
 
-                  for (const commit of commits) {
-                    let match;
-                    while ((match = issuePattern.exec(commit.message)) !== null) {
-                      issueNumbers.add(Number(match[1]));
-                    }
-                  }
-
-                  if (issueNumbers.size === 0) {
-                    console.log("⚠️ No issues referenced in commit.");
-                    return;
-                  }
-
-                  const graphqlWithAuth = github.graphql.defaults({
-                    headers: {
-                      authorization: `Bearer ${process.env.GH_TOKEN}`,
-                    },
-                  });
-
-                  for (const issueNumber of issueNumbers) {
-                    console.log(`🔍 Processing issue #${issueNumber}`);
-
-                    const issueData = await graphqlWithAuth(`
-                      query($owner: String!, $repo: String!, $issue: Int!) {
-                        repository(owner: $owner, name: $repo) {
-                          issue(number: $issue) {
-                            id
+                        for (const commit of commits) {
+                          let match;
+                          while ((match = issuePattern.exec(commit.message)) !== null) {
+                            issueNumbers.add(Number(match[1]));
                           }
                         }
-                      }
-                    `, {
-                      owner: context.repo.owner,
-                      repo: context.repo.repo,
-                      issue: issueNumber
-                    });
 
-                    const issueId = issueData.repository.issue.id;
-                    console.log("✅ Issue node ID:", issueId);
-
-                    const itemData = await graphqlWithAuth(`
-                      query($projectId: ID!, $contentId: ID!) {
-                        projectV2ItemByContent(projectId: $projectId, contentId: $contentId) {
-                          id
+                        if (issueNumbers.size === 0) {
+                          console.log("⚠️ No issues referenced in commit.");
+                          return;
                         }
-                      }
-                    `, {
-                      projectId,
-                      contentId: issueId
-                    });
 
-                    const itemId = itemData.projectV2ItemByContent?.id;
+                        const graphqlWithAuth = github.graphql.defaults({
+                          headers: {
+                            authorization: `Bearer ${process.env.GH_TOKEN}`,
+                          },
+                        });
 
-                    if (!itemId) {
-                      console.log(`❌ Could not find project item for issue #${issueNumber}`);
-                      continue;
-                    }
+                        for (const issueNumber of issueNumbers) {
+                          console.log(`🔍 Processing issue #${issueNumber}`);
 
-                    console.log(`📌 Found project item: ${itemId}`);
-
-                    await graphqlWithAuth(`
-                      mutation {
-                        updateProjectV2ItemFieldValue(
-                          input: {
-                            projectId: "${projectId}",
-                            itemId: "${itemId}",
-                            fieldId: "${fieldId}",
-                            value: {
-                              singleSelectOptionId: "${inReviewOptionId}"
+                          const issueData = await graphqlWithAuth(`
+                            query($owner: String!, $repo: String!, $issue: Int!) {
+                              repository(owner: $owner, name: $repo) {
+                                issue(number: $issue) {
+                                  id
+                                }
+                              }
                             }
-                          }
-                        ) {
-                          projectV2Item {
-                            id
-                          }
-                        }
-                      }
-                    `);
+                          `, {
+                            owner: context.repo.owner,
+                            repo: context.repo.repo,
+                            issue: issueNumber
+                          });
 
-                    console.log(`✅ Updated issue #${issueNumber} to "In review"`);
-                  }
+                          const issueId = issueData.repository.issue.id;
+                          console.log("✅ Issue node ID:", issueId);
+
+                          const itemsData = await graphqlWithAuth(`
+                            query($projectId: ID!) {
+                              node(id: $projectId) {
+                                ... on ProjectV2 {
+                                  items(first: 100) {
+                                    nodes {
+                                      id
+                                      content {
+                                        ... on Issue {
+                                          id
+                                          number
+                                        }
+                                      }
+                                    }
+                                  }
+                                }
+                              }
+                            }
+                          `, { projectId });
+
+                          const items = itemsData.node?.items?.nodes || [];
+                          const matchingItem = items.find(item => item.content?.id === issueId);
+
+                          if (!matchingItem) {
+                            console.log(`⚠️ No matching project item for issue #${issueNumber}`);
+                            continue;
+                          }
+
+                          const itemId = matchingItem.id;
+                          console.log(`✅ Found project item ID: ${itemId}`);
+
+                          await graphqlWithAuth(`
+                            mutation {
+                              updateProjectV2ItemFieldValue(
+                                input: {
+                                  projectId: "${projectId}",
+                                  itemId: "${itemId}",
+                                  fieldId: "${fieldId}",
+                                  value: {
+                                    singleSelectOptionId: "${inReviewOptionId}"
+                                  }
+                                }
+                              ) {
+                                projectV2Item {
+                                  id
+                                }
+                              }
+                            }
+                          `);
+
+                          console.log(`🎯 Updated issue #${issueNumber} to "In review"`);
+                        }
